--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -23,7 +23,7 @@
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control" required></textarea>
 
-            <label for="slug">Slug</label>
+            <label for="slug">Id</label>
              <input type="text" name="slug" class="form-control" required>
             
            
