--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -1,34 +1,47 @@
-<center><h3>NOTÍCIA</h3></center>
+<style>
+   .doze {
+      max-width: 100%;
+      width: 395px;
+      height: 395px;
+      object-fit: cover;
+   }
 
-      
+   .um {
+      max-width: 100%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+   }
+</style>
+<h3>NOTÍCIA</h3>
 <hr>
-
-
 <div class="card mt-4">
-
-    <div class="card-body">
-
-        <h4>{{noticias.titulo}}</h4>
-        <small>descricao: {{noticias.descricao}}</small><br>
-        <br>
-       <center>
-         <img src="../upload{{noticias.imagem}}"  width="400" height="400" /> 
-        </br>    
-      <small> Conteúdo: {{noticias.conteudo}}</small><br>
-        
-         <video width="320" height="240" controls>
-            <source src="../upload{{noticias.video}}" type="video/mp4">
-           
-         </video>
-
+   <div class="card-header text-center">
+      <b><h4>{{noticias.titulo}}</h4></b>
+      <small>descricao: {{noticias.descricao}}</small><br>
+   </div>
+   <div class="card-body">
+      <div class="row">
+         <div class="col-12 text-center">
+            <img src="../upload{{noticias.imagem}}" class="doze" />
+         </div>
          <br>
-         <p>
-         <audio controls>
-            <source src="../upload{{noticias.audio}}" type="audio/mpeg">
-         </audio>
-         </br>
-         </center>
-         </p>
+         <div class="col-12">
+            <div class="container">
+               <h6 class="text-center"> Conteúdo: {{noticias.conteudo}}</h6>
+            </div>
+         </div>
+         <div class="col-12">
+            <video width="320" height="240" controls>
+               <source src="../upload{{noticias.video}}" type="video/mp4">
+            </video>
+         </div>
+         <div class="col-12">
+            <audio controls>
+               <source src="../upload{{noticias.audio}}" type="audio/mpeg">
+            </audio>
+         </div>
+      </div>
      
         
 
