--- a/views/noticias/index.handlebars
+++ b/views/noticias/index.handlebars
@@ -4,22 +4,16 @@
 
 {{#each noticias}}
 
-<div class="card mt-4">
+<div class="card">
 
     <div class="card-body">
         <h4>{{nome}}</h4>
         <small>descricao: {{descricao}}</small><br>
         <small> <h1>Conteúdo:</h1> {{conteudo}}</small><br>
          <img src="{{imagem}}"  width="250" height="150" /> >
-
         <small> DATa:{{data}}</small>
-        
-
     </div>
-
-
 </div>
-
 {{else}}
  <h4 class="mt-3"> Nehuma NOticia registrada </h4>>
 {{/each}}
