alterando css e mudando fundo

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,9 @@
                 font-size: 1rem;
                 font-weight: 400;
                 line-height: 1.5;
-                color: #858796;
+                color: black;
                 text-align: left;
-                background-color: #fff;
+                background-color: white;
                 overflow-x: hidden;
             }
         </style>       
