centralizando corpo noticias

--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -31,12 +31,12 @@
                <h6 class="text-center"> Conteúdo: {{noticias.conteudo}}</h6>
             </div>
          </div>
-         <div class="col-12">
+         <div class="col-12 text-center">
             <video width="320" height="240" controls>
                <source src="../upload{{noticias.video}}" type="video/mp4">
             </video>
          </div>
-         <div class="col-12">
+         <div class="col-12 text-center">
             <audio controls>
                <source src="../upload{{noticias.audio}}" type="audio/mpeg">
             </audio>
