--- a/views/admin/controllerTutorial/addtutorial.handlebars
+++ b/views/admin/controllerTutorial/addtutorial.handlebars
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="card w-75">
             <div class="card-body">
-                <form action="/admin/tutoriais/nova" method="POST">
+                <form action="/admin/tutoriais/nova" method="POST" enctype="multipart/form-data">
                     <div class="form-group row">
                         <div class="col-2">
                             <label for="titulo">Titulo: </label>
@@ -53,9 +53,30 @@
                                 class="form-control">
                         </div>
                     </div>
-                    <div class="form-group mt-3">
-                        imagem
-                        <input type="file" name="imagem" class="form-control-file">
+
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="imagem">Imagem: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="file" name="imagem" class="form-control-file">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="video">Vídeo: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="file" name="video" class="form-control-file">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="audio">Aúdio: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="file" name="audio" class="form-control-file">
+                        </div>
                     </div>
                     <br>
                     <button type="submit" class="btn btn-success"> Tutorial</button>
