--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,13 +61,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card-group">
-                        <div class="card w-100 h-50 mb-3">
+                        <div class="card w-100 h-50 mb-3 text-white bg-info">
                             <div class="card-header">
                                 <h5 class="text-center"><b>Atenção no Lixeiro</b></h5>
                             </div>
                             <div class="card-body text-center">
                                 <p class="text-left"> Hojes é dia de lixeiro nos bairros:</p>
-                                <p class="text-left">Unersitário, Maria Leite, Popular Velha e Centro</p>
+                                <p class="text-left">Universitário, Maria Leite, Popular Velha e Centro</p>
                                 <p class="text-left">Não esqueçam de colocar o lixo no local correto.</p>
                         
                             </div>
@@ -76,7 +76,7 @@
                         </div>
                     
                         <div class="col-12"></div>
-                        <div class="card w-100 h-50 mb-3">
+                        <div class="card w-100 h-50 mb-3 text-white bg-secondary">
                             <div class="card-header">
                                 <h5 class="text-center"><b>Obra de Arte</b></h5>
                             </div>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="col-12"></div>
-                        <div class="card w-100 h-50">
+                        <div class="card w-100 h-50 text-white bg-success">
                             <div class="card-header">
                                 <h5 class="text-center"><b>Novo Tutorial</b></h5>
                             </div>
