--- a/views/tutoriais/index.handlebars
+++ b/views/tutoriais/index.handlebars
@@ -22,5 +22,5 @@
 </div>
 
 {{else}}
-<h4 class="mt-3"> Não houve registro de nenhum tutorial</h4>
+<h4 class="mt-3"> Sem registro de nenhum tutorial</h4>
 {{/each}}
