add css footer e alterando inserção

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,6 +1,11 @@
-<head>
-    <link rel="stylesheet" href="../css/app.css">
-</head>
+<style>
+    .copyright{
+        font-family:Arial, Helvetica, sans-serif !important;
+        font-size: 18px;
+        color:white;
+        padding: 8px;
+    }
+</style>
 <nav class="fixed-bottom navbar-expand-lg navbar-dark bg-dark">
     <div class="d-flex justify-content-center">
         <div class="copyright">
