--- a/views/admin/controllerTutorial/addtutorial.handlebars
+++ b/views/admin/controllerTutorial/addtutorial.handlebars
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="card w-75">
             <div class="card-body">
-                <form action="/admin/tutoriais/nova" method="POST" enctype="multipart/form-data">
+                <form action="/tutoriais/nova" method="POST" enctype="multipart/form-data">
                     <div class="form-group row">
                         <div class="col-2">
                             <label for="titulo">Titulo: </label>
