--- a/views/categorias/pontocoleta.handlebars
+++ b/views/categorias/pontocoleta.handlebars
@@ -1,19 +1,15 @@
-
 <head>
  <link rel="stylesheet" href="../css/estilo.css">
  </head>
 
-
-<h2>Pontos de Coleta:</h2>
-<hr>
-
-
+<h1>{{categoria.nome}}</h1>
 
 {{#each pontocoleta}}
-
-<div class="card mt-4 " style="width: 37rem;">
+<div class="card mt-4" style="width: 37rem;">
 
     <div class="card-body">
+      
+       
 
         <h4 class="ponto-coleta-titulo">{{nome}}</h4>
         <small class="ponto-coleta-texto"> Rua: {{rua}}<small>
@@ -21,28 +17,13 @@
         <small class="ponto-coleta-texto">{{horarioAtendimento}}</small><br>
         
           <small class="ponto-coleta-texto">{{itens}}</small>
- 
-      
         
+
 
     </div>
 
 
-
 </div>
-
-
-
 {{else}}
- <h4 class="mt-3"> Nenhum ponto de coleta registrado</h4>
+<h5>Nenhuma ponto de coleta</h5>
 {{/each}}
-
-        <select name="categoria" class="custom-select">
-                {{#each categorias}}
-                <option value="{{_id}}">{{nome}}</option>
-
-                {{else}}
-                <option value="0">Nenhuma Categoria Registrada</option>
-                {{/each}}
-
-            </select>
