--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -16,12 +16,18 @@
             <label for="titulo">Titulo</label>
             <input type="text" name="titulo" class="form-control" required='true'>
 
+             <label for="titulo">Autor</label>
+            <input type="text" name="autor" class="form-control" required='true'>
+
+
 
             <label for="descricao">Descrição</label>
             <input type="text" name="descricao" class="form-control" required>
 
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control" required></textarea>
+
+           
 
             <label for="slug">Id</label>
              <input type="text" name="slug" class="form-control" required>
