--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -16,7 +16,7 @@
             <label for="titulo">Titulo</label>
             <input type="text" name="titulo" class="form-control" required='true'>
 
-             <label for="titulo">Autor</label>
+             <label for="autor">Autor</label>
             <input type="text" name="autor" class="form-control" required='true'>
 
 
