--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -19,6 +19,7 @@
    <div class="card-header text-center">
       <b><h4>{{noticias.titulo}}</h4></b>
       <small>descricao: {{noticias.descricao}}</small><br>
+      <small>Autor: {{noticias.autor}}</small><br>
    </div>
    <div class="card-body">
       <div class="row">
