--- a/public/css/tutoriais.css
+++ b/public/css/tutoriais.css
@@ -24,4 +24,8 @@
   font-family:Arial, Helvetica, sans-serif;
   text-align: justify;
 }
-
+.descriNoticias{
+  font-size: 18px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: justify;
+}
