--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -6,7 +6,7 @@
         padding: 8px;
     }
 </style>
-<nav class="fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+<nav class="fixed-bottom navbar-expand-lg navbar-dark bg-success">
     <div class="d-flex justify-content-center">
         <div class="copyright">
             Copyright &copy; 2019 <span>Pantaneiro Ecológico</span>
