--- a/views/tutoriais/index.handlebars
+++ b/views/tutoriais/index.handlebars
@@ -28,7 +28,8 @@
     <div class="card-body">
         <div class="row">
             <div class="col-6">
-                <img class="doze " src="../uploadTutorial{{imagem}}">
+                <a href="/homeTutorial/{{_id}}">
+                <img class="doze " src="../uploadTutorial{{imagem}}"></a>
             </div>
             <div class="col-6">
                 <p class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
@@ -37,9 +38,9 @@
         <div class="row">
             <div class="col-6"></div>
             <div class="col-6 text-center">
-                <button class="btn btn-lg btn-success justify-content-xl-end">
+                <a href="/homeTutorial/{{_id}}"><button class="btn btn-lg btn-success justify-content-xl-end">
                     Ver mais
-                </button>
+                </button></a>
             </div>
         </div>
     </div>
