subindo alterações de front

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card-group">
-                        <div class="card w-100 h-50 mb-3 text-white bg-info">
+                        <div class="card w-100 h-50 mb-3 text-white bg-success">
                             <div class="card-header">
                                 <h5 class="text-center"><b>Atenção no Lixeiro</b></h5>
                             </div>
@@ -76,7 +76,7 @@
                         </div>
                     
                         <div class="col-12"></div>
-                        <div class="card w-100 h-50 mb-3 text-white bg-secondary">
+                        <div class="card w-100 h-50 mb-3 text-white bg-success">
                             <div class="card-header">
                                 <h5 class="text-center"><b>Obra de Arte</b></h5>
                             </div>
@@ -88,24 +88,6 @@
                                     <div class="col-8">
                                         <p class="text-left"> Artista de Ládario</p>
                                         <p class="text-left">Monta um robô com o uso de sucata</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class=" card-footer">
-                            </div>
-                        </div>
-                        <div class="col-12"></div>
-                        <div class="card w-100 h-50 text-white bg-success">
-                            <div class="card-header">
-                                <h5 class="text-center"><b>Novo Tutorial</b></h5>
-                            </div>
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-4">
-                                        {{!-- <img src="imagens/arte.jpg" class="um"> --}}
-                                    </div>
-                                    <div class="col-8">
-
                                     </div>
                                 </div>
                             </div>
