--- a/views/tutoriais/homeTutorial.handlebars
+++ b/views/tutoriais/homeTutorial.handlebars
@@ -45,4 +45,10 @@
             </div>
         </div>
     </div>
+    <div class="card-footer text-muted">
+        <blockquote class="blockquote mb-0">
+            <footer class="autor" class="blockquote-footer">Autor: {{tutorial.autor}}</footer>
+        </blockquote>
+        <div class="data" class="d-flex justify-content-end">Data de Publicação: {{tutorial.data}}</div>
+    </div>
 </div>
