--- a/views/admin/noticias.handlebars
+++ b/views/admin/noticias.handlebars
@@ -45,7 +45,7 @@
         </div>
         <div class="card-footer text-muted">
           <blockquote class="blockquote mb-0">
-            {{!-- <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer> --}}
+            <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer>
           </blockquote>
           <div class="data" class="d-flex justify-content-end">Data de Publicação: {{data}}</div>
         </div>
