--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -43,11 +43,12 @@
             </audio>
          </div>
       </div>
-     
-        
-
     </div>
-
-
+   <div class="card-footer text-muted">
+      <blockquote class="blockquote mb-0">
+         <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer>
+      </blockquote>
+      <div class="data" class="d-flex justify-content-end">Data de Publicação: {{data}}</div>
+   </div>
 </div>
 
