--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,14 +38,14 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6">
-                                <a href="/homeNoticias/{{slug}}"><img class="doze" style="max-width: 250px; max-height:250px"
+                                <a href="/homeNoticias/{{id}}"><img class="doze" style="max-width: 250px; max-height:250px"
                                         src="../upload{{imagem}}"></a>
                             </div>
                             <div class="col-6">
                                 <div class="text-center">
                                     <h5 class="card-title"><b>Titulo: {{titulo}}</b></h5>
                                     <p class="card-text">Descricao: {{descricao}}</p>
-                                    <a href="/HomeNoticias/{{slug}}" <button class="btn btn-success">Leia Mais</button> </a>
+                                    <a href="/HomeNoticias/{{id}}" <button class="btn btn-success">Leia Mais</button> </a>
                                 </div>
                             </div>
                         </div>
