--- a/views/admin/addproduto.handlebars
+++ b/views/admin/addproduto.handlebars
@@ -1,31 +1,50 @@
-{{#each erros}}
 
- <div class="alert alert-danger">{{texto}}</div>
+{{#each erros}}
+<div class="alert alert-danger">{{texto}}</div>
 
 {{else}}
-
 {{/each}}
 
-<h3>Novo Produto:</h3>
 <div class="card">
 
-<div class="card-body">
+    <div class="card-body">
 
-<form action="/admin/produto/nova" method="POST">
+        <h4>Novo Produto</h4>
 
-<label for="titulo">Titulo: </label>
-<input type="text" id="titulo" name="titulo" placeholder="Titulo" class="form-control">
+          <form action="/produto/nova" method="POST" enctype="multipart/form-data">
+        
 
-<label for="subtitulo">Subtitulo: </label>
-<input type="text" name="subtitulo" placeholder="Subtitulo" class="form-control" required>
+            <label for="titulo">Titulo</label>
+            <input type="text" name="titulo" class="form-control" required='true'>
 
-<label for="texto">Texto: </label>
-<textarea name="texto" class="form-control" required></textarea>
-			
-			
-<button type="submit" class="btn btn-success mt-4">Cadastrar Produto</button>
 
-</form>
+            <label for="subtitulo">Subtítulo</label>
+            <input type="text" name="subtitulo" class="form-control" required>
 
+            <label for="texto">Texto</label>
+            <textarea name="texto" class="form-control" required></textarea>
+
+            <label for="slug">Id</label>
+             <input type="text" name="slug" class="form-control" required>
+            
+           
+                <div class="form-group mt-3">
+                      Imagem
+                    <input type="file" name="imagem" class="form-control-file">
+                </div>
+
+                 <div class="form-group mt-3">
+                      Video
+                    <input type="file" name="video" class="form-control-file">
+                </div>
+                   
+                  <div class="form-group mt-3">
+                      Audio
+                    <input type="file" name="audio" class="form-control-file">
+                </div>
+           <button class="btn btn-success mt-4" type="submit">Criar Produto</button>
+
+        </form>
+    </div>
 </div>
-</div>
+
