--- a/views/admin/produto.handlebars
+++ b/views/admin/produto.handlebars
@@ -1,35 +1,31 @@
-<h2>Lista de Produtos:</h2>
-<hr>
-<a href="/admin/produto/add" <button class="btn btn-success">Novo Produto</button> </a>
 
-{{#each produto}}
+<br>
+<center>
+<h2>Todos os Produtos:</h2>
+</center>
+</br>
+ <link rel="stylesheet" href="../css/estilo.css">
 
-<div class="card mt-4">
+<div class="card-deck"> 
 
-    <div class="card-body">
+{{#each produto}} 
+<div classs="row>">
+<div class="col-sm-12" >
+        <div class="card" >
+              <a href="/homeProduto/{{slug}}"><img src="../uploadproduto{{imagem}}" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h1 class="card-title">{{titulo}}</h1>
+              <p class="card-text">{{subtitulo}}</p>
+            </div>
+        </div>
+        
+  {{else}}
+  </div>
+  </div>
 
-
-        <h3>{{titulo}}</h3>
-		<h4>{{subtitulo}}</h4>
-        <small>Data: {{data}}</small><br>
-
-
-		<h6>{{texto}}</h6>
-
-        <a href="/admin/produto/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Produto</button></a>
-
-        <form action="/admin/produto/deletar" method="POST">
-
-            <input type="hidden" name="id" value="{{_id}}">
-            <button type="submit" class="btn btn-danger mt-2">Deletar Produto</button>
-
-        </form> 
-
-    </div>
-
-
-</div>
-
-{{else}}
- <h4 class="mt-3"> Nenhum Produto Registrado</h4>
-{{/each}}
+<center>
+    <p>Nenhum produto Registrado</p>
+  {{/each}}
+  </div>
+  </center>
+  
