--- a/views/produto/index.handlebars
+++ b/views/produto/index.handlebars
@@ -1,26 +1,18 @@
-<h2>Produtos:</h2>
+<h2>PRODUTOS:</h2>
 <hr>
-
 
 {{#each produto}}
 
-<div class="card mt-4">
+<div class="card">
 
     <div class="card-body">
-
-        <h3>{{titulo}}</h3>
-        <p>{{subtitulo}}</p>
-        <hr>
-        <small>Data de Publicação: {{data}}</small><br>
-		<hr>
-        <h6>{{texto}}</h6>
-
-        <a href="/produto/{{slug}}"> <button class="btn btn-success">Leia Mais</button> </a>
-        <hr>
+        <h4>{{titulo}}</h4>
+        <small>{{subtitulo}}</small><br>
+        <small> <h1></h1> {{texto}}</small><br>
+         <img src="{{imagem}}"  width="250" height="150" /> >
+        <small> Data:{{data}}</small>
     </div>
-
 </div>
-
 {{else}}
- <h4 class="mt-3"> Nenhum produto registrado</h4>
+ <h4 class="mt-3"> Nehum Produto Registrado </h4>>
 {{/each}}
