--- a/views/admin/noticias.handlebars
+++ b/views/admin/noticias.handlebars
@@ -26,7 +26,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-6 text-center">
-              <a href="/homeNoticias/{{slug}}"><img src="../upload{{imagem}}" class="doze"></a>
+              <a href="/homeNoticias/{{id}}"><img src="../upload{{imagem}}" class="doze"></a>
             </div>
             <div class="col-6">
               <h5>Descrição:</h5>
@@ -37,7 +37,7 @@
           <div class="row">
             <div class="col-6"></div>
             <div class="col-6 text-center">
-              <a href="/homeNoticias/{{slug}}"><button class="btn btn-lg btn-success justify-content-xl-end">
+              <a href="/homeNoticias/{{id}}"><button class="btn btn-lg btn-success justify-content-xl-end">
                 Ver mais
               </button></a>
             </div>
