--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -46,9 +46,9 @@
     </div>
    <div class="card-footer text-muted">
       <blockquote class="blockquote mb-0">
-         <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer>
+         <footer class="autor" class="blockquote-footer">Autor: {{noticias.autor}}</footer>
       </blockquote>
-      <div class="data" class="d-flex justify-content-end">Data de Publicação: {{data}}</div>
+      <div class="data" class="d-flex justify-content-end">Data de Publicação: {{noticias.data}}</div>
    </div>
 </div>
 
