--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -91,7 +91,7 @@
                                 <h5 class="text-center"><b>Coleta Seletiva</b></h5>
                             </div>
                             <div class="card-body">
-                                <img src="imagens/Folha2.jpg" class="tabela1" data-lightbox="roadtrip" >
+                                <img src="imagens/Folha2.jpg" class="tabela1" >
                             </div>
                             <div class=" card-footer">
                             </div>
@@ -105,7 +105,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-4">
-                                        <img src="imagens/arte.jpg" class="um" data-lightbox="arte" >
+                                        <img src="imagens/arte.jpg" class="um" >
                                     </div>
                                     <div class="col-8">
                                         <p class="text-left"> Artista de Ládario</p>
@@ -123,9 +123,3 @@
         </div>
     </div>
 </div>
-<script>
-    lightbox.option({
-        'resizeDuration': 200,
-        'wrapAround': true
-    });
-</script>
