subindo calendario de coleta com efeito

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,13 @@
 <head>
     <link rel="stylesheet" href="../css/estilo.css">
+    <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
+    
+    <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    
+    <!-- Magnific Popup core JS file -->
+    <script src="magnific-popup/jquery.magnific-popup.js"></script>
 </head>
 <style>
     .doze{
@@ -80,7 +88,7 @@
                                 <h5 class="text-center"><b>Coleta Domiciliar</b></h5>
                             </div>
                             <div class="card-body">
-                                <center><img src="imagens/Folha12.jpg" class="tabela2"></center>
+                                <a class="test-popup-link" href="imagens/Folha12.jpg"><center><img src="imagens/Folha12.jpg" class="tabela2"></center></a>
                             </div>
                             <div class=" card-footer">
                             </div>
@@ -91,7 +99,13 @@
                                 <h5 class="text-center"><b>Coleta Seletiva</b></h5>
                             </div>
                             <div class="card-body">
-                                <img src="imagens/Folha2.jpg" class="tabela1" >
+                              <script>
+                              $('.test-popup-link').magnificPopup({
+                              type: 'image'
+                              // other options
+                              });
+                              </script>
+                                <a class="test-popup-link" href="imagens/Folha2.jpg"><img   src="imagens/Folha2.jpg" class="tabela1" ></a>
                             </div>
                             <div class=" card-footer">
                             </div>
