alterando novas configurações com a view

--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -29,7 +29,7 @@
          <br>
          <div class="col-12">
             <div class="container">
-               <h6 class="text-center"> Conteúdo: {{noticias.conteudo}}</h6>
+               <h6 align="justify" class="text-center"> Conteúdo: {{noticias.conteudo}}</h6>
             </div>
          </div>
          <div class="col-12 text-center">
