--- a/views/tutoriais/homeTutorial.handlebars
+++ b/views/tutoriais/homeTutorial.handlebars
@@ -30,7 +30,7 @@
             <br>
             <div class="col-12">
                 <div class="container">
-                    <h6 class="text-center"> Conteúdo: {{tutorial.texto}}</h6>
+                    <h6 align="justify" class="text-center"> Conteúdo: {{tutorial.texto}}</h6>
                 </div>
             </div>
             <div class="col-12 text-center">
