--- a/views/tutoriais/index.handlebars
+++ b/views/tutoriais/index.handlebars
@@ -32,7 +32,7 @@
                 <img class="doze " src="../uploadTutorial{{imagem}}"></a>
             </div>
             <div class="col-6">
-                <p class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
+                <p align="justify" class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
             </div>
         </div>
         <div class="row">
