--- a/views/noticias/index.handlebars
+++ b/views/noticias/index.handlebars
@@ -1,19 +1,48 @@
-
-<h2>NOTICIAS:</h2>
+<style>
+    .doze {
+        max-width: 100%;
+        width: 395px;
+        height: 395px;
+        object-fit: cover;
+    }
+</style>
+<h2>NOTICIAS</h2>
 <hr>
-
-{{#each noticias}}
-
-<div class="card">
-
-    <div class="card-body">
-        <h4>{{nome}}</h4>
-        <small>descricao: {{descricao}}</small><br>
-        <small> <h1>Conteúdo:</h1> {{conteudo}}</small><br>
-         <img src="{{imagem}}"  width="250" height="150" /> >
-        <small> DATa:{{data}}</small>
+<div class="card-group">
+    <div class="row">
+        {{#each noticias}}
+        <div class="card" style="max-width: 75rem;">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-12">
+                        <b><h3 class="text-center">{{nome}}</h3></b>
+                    </div>
+                    <div class="col-12">
+                        <small>descricao: {{descricao}}</small>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-6">
+                        <center><img src="{{imagem}}" class="doze" /> </center>
+                    </div>
+                    <div class="col-6">
+                        <h6 align="justify">Conteúdo:</h6> {{conteudo}}
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer text-muted">
+                <blockquote class="blockquote mb-0">
+                    <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer>
+                </blockquote>
+                <div class="data" class="d-flex justify-content-end">Data de Publicação: {{data}}</div>
+            </div>
+        </div>
+        {{else}}
+        <h4 class="mt-3"> Nehuma NOticia registrada </h4>>
+        {{/each}}
     </div>
 </div>
-{{else}}
- <h4 class="mt-3"> Nehuma NOticia registrada </h4>>
-{{/each}}
+
+        
