arrumado busca por categorias

--- a/views/categorias/index.handlebars
+++ b/views/categorias/index.handlebars
@@ -1,4 +1,22 @@
+
+<h2>Pontos de Coleta:</h2>
+
+<h1>{{categoria.nome}}</h1>
+
+
 <h4>Categorias: </h4>
+
+  <select  class="custom-select">
+                {{#each categorias}}
+               <option onclick="location.href='/categorias/{{slug}}'"> <h5>{{nome}}</h5> </option> 
+
+                {{else}}
+                <option value="0">Nenhuma Categoria Registrada</option>
+                {{/each}}
+
+            </select>
+
+<!--
 <hr>
 {{#each categorias}}
 <a href="/categorias/{{slug}}"> <h5>{{nome}}</h5> </a> 
@@ -6,3 +24,9 @@
 {{else}}
 
 {{/each}}
+
+ -- >
+
+             
+
+           
