--- a/views/pontocoleta/index.handlebars
+++ b/views/pontocoleta/index.handlebars
@@ -4,6 +4,10 @@
  </head>
 
 
+<div class="tudo">
+
+<div class="menu">
+
 <h2>Pontos de Coleta:</h2>
 <hr>
 
@@ -37,12 +41,22 @@
  <h4 class="mt-3"> Nenhum ponto de coleta registrado</h4>
 {{/each}}
 
-        <select name="categoria" class="custom-select">
+ </div>
+
+   <div class="conteudo">
+
+              <h4>Categorias: </h4>
+
+              <select  class="custom-select">
                 {{#each categorias}}
-                <option value="{{_id}}">{{nome}}</option>
+               <option onclick="location.href='/categorias/{{slug}}'"> <h5>{{nome}}</h5> </option> 
 
                 {{else}}
                 <option value="0">Nenhuma Categoria Registrada</option>
                 {{/each}}
 
             </select>
+  <div>
+
+
+ </div>
