--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -43,6 +43,27 @@ a{
 
 }
 
+.divlateral {
+  
+position: relative;
+float:left;
+border-width: 2px;
+width: 300px;
+height: 700px;
+
+    
+}
+
+.diva {
+    
+   position: relative;
+   float:left; 
+    border-width: 2px;
+    width: auto;
+    height: auto;
+    left: 400px;
+    
+}
 
 .ponto-coleta-titulo{
 
