--- a/views/admin/addproduto.handlebars
+++ b/views/admin/addproduto.handlebars
@@ -1,4 +1,3 @@
-
 {{#each erros}}
 <div class="alert alert-danger">{{texto}}</div>
 
@@ -12,39 +11,39 @@
         <h4>Novo Produto</h4>
 
           <form action="/produto/nova" method="POST" enctype="multipart/form-data">
-        
 
             <label for="titulo">Titulo</label>
-            <input type="text" name="titulo" class="form-control" required='true'>
+            <input type="text" name="titulo" placeholder="Digite o Título" class="form-control" required='true'>
 
 
             <label for="subtitulo">Subtítulo</label>
-            <input type="text" name="subtitulo" class="form-control" required>
+            <input type="text" name="subtitulo" placeholder="Digite o Subtítulo" class="form-control" required>
+
+            <label for="autor">Escrito por</label>
+            <input type="text" name="autor" placeholder="Digite o nome do autor da publicação" class="form-control" required>
+            
+            <div class="form-group mt-3">
+              Imagem
+              <input type="file" name="imagem" class="form-control-file">
+            </div>
 
             <label for="texto">Texto</label>
-            <textarea name="texto" class="form-control" required></textarea>
+            <textarea name="texto" placeholder="Digite o conteúdo da publicação" class="form-control" required></textarea>
 
-            <label for="slug">Id</label>
-             <input type="text" name="slug" class="form-control" required>
-            
-           
-                <div class="form-group mt-3">
-                      Imagem
-                    <input type="file" name="imagem" class="form-control-file">
-                </div>
+            <label for="textocom">Texto Complementar</label>
+            <textarea name="textocom" placeholder="Digite o conteúdo complementar da publicação" class="form-control" required></textarea>
 
-                 <div class="form-group mt-3">
-                      Video
-                    <input type="file" name="video" class="form-control-file">
-                </div>
+            <div class="form-group mt-3">
+                Video
+                <input type="file" name="video" class="form-control-file">
+            </div>
                    
-                  <div class="form-group mt-3">
-                      Audio
-                    <input type="file" name="audio" class="form-control-file">
-                </div>
+            <div class="form-group mt-3">
+                Audio
+                <input type="file" name="audio" class="form-control-file">
+            </div>
            <button class="btn btn-success mt-4" type="submit">Criar Produto</button>
 
         </form>
     </div>
 </div>
-
