Update produto hbs

--- a/views/admin/produto.handlebars
+++ b/views/admin/produto.handlebars
@@ -1,31 +1,55 @@
-
 <br>
 <center>
-<h2>Todos os Produtos:</h2>
+  <h2>Todos os Produtos:</h2>
 </center>
 </br>
- <link rel="stylesheet" href="../css/estilo.css">
 
-<div class="card-deck"> 
+<style>
+  .doze {
+    max-width: 100%;
+    width: 395px;
+    height: 395px;
+    object-fit: cover;
+  }
 
-{{#each produto}} 
-<div classs="row>">
-<div class="col-sm-12" >
-        <div class="card" >
-              <a href="/homeProduto/{{slug}}"><img src="../uploadproduto{{imagem}}" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h1 class="card-title">{{titulo}}</h1>
+  .um {
+    max-width: 100%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+  }
+</style>
+
+<link rel="stylesheet" href="../css/estilo.css">
+<div class="card-group">
+  <div class="col-xl-7">
+    {{#each produto}}
+    <div class="card mb-2" style="max-width: 40rem;">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-6">
+            <a href="/homeProduto/{{_id}}"><img class="doze" style="max-width: 250px; max-height:250px"
+                src="../uploadproduto{{imagem}}"></a>
+          </div>
+          <div class="col-6">
+            <div class="text-center">
+              <h5 class="card-title"><b> {{titulo}}</b></h5>
               <p class="card-text">{{subtitulo}}</p>
+              <br>
+              <br>
+              <br>
+              <p class="card-text">Escrito por: {{autor}}</p>
+              <a href="/homeProduto/{{_id}}" <button class="btn btn-success">Leia Mais</button> </a>
             </div>
+          </div>
         </div>
-        
-  {{else}}
+      </div>
+    </div>
+    {{else}}
+    <center>
+      <p>Nenhum Produto Registrado</p>
+    </center>
+    {{/each}}
   </div>
-  </div>
-
-<center>
-    <p>Nenhum produto Registrado</p>
-  {{/each}}
-  </div>
-  </center>
+</div>
   
