--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -14,24 +14,18 @@
         
 
             <label for="titulo">Titulo</label>
-            <input type="text" name="titulo" class="form-control" required='true'>
+            <input type="text" name="titulo" class="form-control" >
 
              <label for="autor">Autor</label>
-            <input type="text" name="autor" class="form-control" required='true'>
+            <input type="text" name="autor" class="form-control" >
 
 
 
             <label for="descricao">Descrição</label>
-            <input type="text" name="descricao" class="form-control" required>
+            <input type="text" name="descricao" class="form-control" >
 
             <label for="conteudo">Conteudo</label>
-            <textarea name="conteudo" class="form-control" required></textarea>
-
-           
-
-         
-            
-           
+            <textarea name="conteudo" class="form-control" ></textarea>
                 <div class="form-group mt-3">
                       imagem
                     <input type="file" name="imagem" class="form-control-file">
@@ -41,23 +35,13 @@
                       video
                     <input type="file" name="video" class="form-control-file">
                 </div>
-                   
                   <div class="form-group mt-3">
                       audio
                     <input type="file" name="audio" class="form-control-file">
                 </div>
- 
-
            <button class="btn btn-success mt-4" type="submit">Criar Noticia</button>
-            
-
         </form>
-
-
-
     </div>
-
-
 </div>
        
 
