--- a/views/admin/produto.handlebars
+++ b/views/admin/produto.handlebars
@@ -29,7 +29,7 @@
         <div class="row">
           <div class="col-6">
             <a href="/homeProduto/{{_id}}"><img class="doze" style="max-width: 250px; max-height:250px"
-                src="../uploadproduto{{imagem}}"></a>
+                src="../uploadProduto{{imagem}}"></a>
           </div>
           <div class="col-6">
             <div class="text-center">
