--- a/views/produto/homeProduto.handlebars
+++ b/views/produto/homeProduto.handlebars
@@ -32,7 +32,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-12 text-center">
-                <img src="../uploadproduto{{produto.imagem}}" class="doze" />
+                <img src="../uploadProduto{{produto.imagem}}" class="doze" />
             </div>
             <br>
             <div class="col-12">
@@ -47,12 +47,12 @@
             </div>
             <div class="col-12 text-center">
                 <video width="320" height="240" controls>
-                    <source src="../uploadproduto{{produto.video}}" type="video/mp4">
+                    <source src="../uploadProduto{{produto.video}}" type="video/mp4">
                 </video>
             </div>
             <div class="col-12 text-center">
                 <audio controls>
-                    <source src="../uploadproduto{{produto.audio}}" type="audio/mpeg">
+                    <source src="../uploadProduto{{produto.audio}}" type="audio/mpeg">
                 </audio>
             </div>
         </div>
