--- a/views/produto/index.handlebars
+++ b/views/produto/index.handlebars
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-6">
                 <a href="/homeProduto/{{_id}}">
-                <img class="doze " src="../uploadproduto{{imagem}}"></a>
+                <img class="doze " src="../uploadProduto{{imagem}}"></a>
             </div>
             <div class="col-6">
                 <p class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
